[package]
name = "viassic_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace=true
strum = { version = "0.24.1", features = ["derive"] }
vinox_voxel.workspace = true
ahash = "0.8.3"
serde = "1.0.163"

